alignment fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3197,7 +3197,7 @@ body.loaded {
 }
 
 .navbar {
-  color: white;
+  /* color: white; */
   height: 80px;
   padding: 0;
   margin: 0;
@@ -3212,7 +3212,8 @@ body.loaded {
   width: calc(100% - 80px);
   left: 40px;
   top: 30px;
-  background: rgba(255, 255, 255, 0.05);
+  /* background: rgba(255, 255, 255, 0.05); */
+  background-color: white;
   border: 1px solid rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
@@ -11064,38 +11065,48 @@ header.in-box {
   left: 0;
   z-index: 0;
 }
-.news-banner {
-  height: 100vh;
-}
-.blog-banner {
-  height: 100vh;
-  /* object-fit: cover; */
-}
-.career-banner {
-  height: 100vh;
-}
 
 @media (max-width: 567px) {
   .hero-responsive {
     height: 70vh;
   }
-  .news-banner {
-    height: 70vh;
+}
+
+/* Default styles for larger screens (e.g., tablets and desktops) */
+.de_count {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
   }
-  .blog-banner {
-    height: 70vh;
-  }
-  .career-banner {
-    height: 70vh;
+
+  .col-lg-2 {
+    flex: 0 0 16.6667%; /* 6 items per row on larger screens */
+    max-width: 16.6667%;
   }
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-  z-index: 10;
-}
+/* Styles for mobile screens */
+@media (max-width: 767px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.button-next,
-.button-prev {
-  font-size: 1.5rem;
+  .col-lg-2,
+  .col-md-4,
+  .col-6 {
+    flex: 0 0 50%; /* 2 items per row on small screens */
+    max-width: 50%;
+  }
+
+  .mb-4 {
+    margin-bottom: 1.5rem; /* Adjust spacing for mobile */
+  }
 }
